Basic gulp settings

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
     <link rel="stylesheet" href="./bower_components/angular-material/angular-material.css"/>
-    <link rel="stylesheet" href="./app/css/main.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
   </head>
 
 
@@ -73,16 +73,11 @@
         </md-content>
 
     </div>
-    <script src="https://apis.google.com/js/client.js?onload=appStart"></script>
-    <script src="./bower_components/angular/angular.js" type="text/javascript" ></script>
-    <script src="./bower_components/angular-animate/angular-animate.js" type="text/javascript" ></script>
-    <script src="./bower_components/angular-aria/angular-aria.js" type="text/javascript" ></script>
-    <script src="./bower_components/angular-material/angular-material.js" type="text/javascript" ></script>
+    <!-- bower:js -->
+    <!-- endinject -->
 
-     <!-- Load App Logic -->
-    <script src="./app/src/employees/Employees.js"></script>
-    <script src="./app/src/employees/EmployeeService.js"></script>
-    <script src="./app/src/employees/EmployeeController.js"></script>
+  <!-- Load App Logic -->
+  <script src="javascript/app.js"></script>
 
 
   <script type="text/javascript">
