--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,15 +30,7 @@
 }, ROOT);
       };
   </script>
-    <body ng-app="starterApp" layout="column"  ng-controller="EmployeeController as employeeController">
-
-    <!-- Container #1 (see wireframe) -->
-   <md-toolbar layout="row">
-      <md-button class="menu" hide-gt-sm ng-click="employeeController.toggleUsersList()">
-        <md-icon md-svg-icon="menu" ></md-icon>
-      </md-button>
-      <h1>Angular Material - Star App</h1>
-    </md-toolbar>
+    <body ng-app="starterApp" layout="column">
 
     <!-- Container #2 -->
     <div flex layout="row">
@@ -58,19 +50,22 @@
             </md-item>
 
           </md-list>
-
+   
         </md-sidenav>
 
         <!-- Container #4 -->
         <md-content flex id="content">
-               <md-icon md-svg-icon="assets/svg/{{employeeController.selected.avatar}}.svg" class="avatar"></md-icon>
-          <h2>{{employeeController.selected.name}}</h2>
-          <p>{{employeeController.selected.content}}</p>
+          <!-- Container #1 (see wireframe) -->
+         <md-toolbar layout="row">
+            <md-button class="menu" hide-gt-sm ng-click="employeeController.toggleUsersList()">
+              <md-icon md-svg-icon="menu" ></md-icon>
+            </md-button>
+            <h1>Cantomate</h1>
+          </md-toolbar>
 
-          <md-button class="share" md-no-ink ng-click="employeeController.share($event)">
-            <md-icon md-svg-icon="share" ></md-icon>
-          </md-button>
         </md-content>
+
+
 
     </div>
     <!-- bower:js -->
@@ -82,19 +77,7 @@
 
   <script type="text/javascript">
       angular
-          .module('starterApp', [ 'ngMaterial' , 'employees'])
-          .config(function( $mdIconProvider , $mdThemingProvider){
-              // Register the user `avatar` icons
-              $mdIconProvider
-                      .defaultIconSet("./assets/svg/avatars.svg", 128)
-                      .icon("menu", "./assets/svg/menu.svg", 24)
-                      .icon("share", "./assets/svg/share.svg", 24);
-
-             $mdThemingProvider.theme('default')
-              .primaryPalette('brown')
-              .accentPalette('red');
-
-          })
+          .module('starterApp', [ 'ngMaterial'])
           .run(function($log){
             $log.debug("startApp + ngMaterial running ");
           });
