--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
   </head>
 
 
-  <!-- <script type="text/javascript">
+  <script type="text/javascript">
 
       function appStart(){
         var ROOT = 'http://localhost:8080/_ah/api';
@@ -29,8 +29,8 @@
         });
 }, ROOT);
       };
-  </script> -->
-    <body ng-app="starterApp" layout="column">
+  </script>
+    <body ng-app="Cantomate" layout="column">
 
     <div flex layout="row">
 
@@ -42,9 +42,12 @@
             <h1>Cantomate</h1>
           </header>
 
+          <ul ng-controller="BankListController as controller">
+            <li ng-repeat="bank in controller.banks">{{bank}}</li>
+          </ul>
+
 
           <!-- User list #3 -->
-
         </md-sidenav>
 
         <!-- Container #4 -->
@@ -62,6 +65,7 @@
     <!-- endinject -->
 
   <!-- Load App Logic -->
+  <script src="https://apis.google.com/js/client.js?onload=appStart"></script>
   <script src="javascript/app.js"></script>
 
 
