--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,5 +43,6 @@
 
     <!-- Load App Logic -->
     <script src="javascript/app.js"></script>
+    <script src="https://apis.google.com/js/client.js?onload=startApp"></script>
   </body>
 </html>
